# variousshit

variousshit/: pyproject.toml  setup.cfg
variousshit/src/variousshit/: amogus.py  randombincode.py  randomhexcode.py  returntrueifequal.py
