[metadata]
# replace with your username:
name = 
version = 0.0.1
author = hellofrombelarus
author_email = galacticraft1987@gmail.com
description = its just a package of simple programs
url = https://github.com/hellofrombelarus/variousshit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires => 3.8

[options.packages.find]
where = src